--- a/DapartmentChair/templates/admin-change-password.html
+++ b/DapartmentChair/templates/admin-change-password.html
@@ -46,52 +46,7 @@
       <img class="animation__wobble" src="{% static 'dist/img/pit_logo.png' %}" alt="AdminLTELogo" height="60" width="60">
     </div>
   
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
-      <!-- Left navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block">
-          <a href="{% url 'admin-dashboard' %}" class="nav-link">Home</a>
-        </li>
-      </ul>
-  
-      <!-- Right navbar links -->
-      <ul class="navbar-nav ml-auto">
-        <!-- Navbar Search -->
-        <li class="nav-item">
-          <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-            <i class="fas fa-search"></i>
-          </a>
-          <div class="navbar-search-block">
-            <form class="form-inline">
-              <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                <div class="input-group-append">
-                  <button class="btn btn-navbar" type="submit">
-                    <i class="fas fa-search"></i>
-                  </button>
-                  <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                    <i class="fas fa-times"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </li>
-  
-   
-        <li class="nav-item">
-          <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-            <i class="fas fa-expand-arrows-alt"></i>
-          </a>
-        </li>
-      
-      </ul>
-    </nav>
-    <!-- /.navbar -->
+
   
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
@@ -259,28 +214,28 @@
           <div class="row">
             <div class="container-fluid">
 
-                <div class="card" style="border-top: 4px solid #593bdb; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
+                <div class="card mt-5" style="border-top: 4px solid #593bdb; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
                     <div class="card-header">
-                        <h4 class="card-title text-white" style="font-size: 30px; font-weight: 800;">Change Password</h4>
+                        <h4 class="card-title" style="font-size: 30px; font-weight: 800;">Change Password</h4>
                     </div>
                     <div class="card-body">
                         <div class="basic-form">
                             <form method="post">
                                 {% csrf_token %}
                                 <div class="form-group row mb-4">
-                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Old Password</label>
+                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" style="font-size: 15px">Old Password</label>
                                     <div class="col-sm-12 col-md-7">
                                         <input type="password" name="old_password" class="form-control {% if form.errors.old_password %} border-danger {% endif %}" style="border: 1px solid #bebebe; width: 53%;" required>
                                     </div>
                                 </div>
                                 <div class="form-group row mb-4">
-                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">New Password</label>
+                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" style="font-size: 15px">New Password</label>
                                     <div class="col-sm-12 col-md-7">
                                         <input type="password" name="new_password1" class="form-control {% if form.errors.new_password1 or form.errors.new_password2 %} border-danger {% endif %}" style="border: 1px solid #bebebe; width: 53%;" required>
                                     </div>
                                 </div>
                                 <div class="form-group row mb-4">
-                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Confirm Password</label>
+                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" style="font-size: 15px">Confirm Password</label>
                                     <div class="col-sm-12 col-md-7">
                                         <input type="password" name="new_password2" class="form-control {% if form.errors.new_password1 or form.errors.new_password2 %} border-danger {% endif %}" style="border: 1px solid #bebebe; width: 53%;" required>
                                     </div>
@@ -331,11 +286,9 @@
   
     <!-- Main Footer -->
     <footer class="main-footer">
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-      All rights reserved.
-      <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.1.0
-      </div>
+      <strong>Borrowing System By: </strong>
+      Run Time Terror.
+      
     </footer>
   </div>
 
