--- a/DapartmentChair/templates/admin-item-record.html
+++ b/DapartmentChair/templates/admin-item-record.html
@@ -152,52 +152,6 @@
       <img class="animation__wobble" src="{% static 'dist/img/pit_logo.png' %}" alt="AdminLTELogo" height="60" width="60">
     </div>
   
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
-      <!-- Left navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block">
-          <a href="{% url 'admin-dashboard' %}" class="nav-link">Home</a>
-        </li>
-      </ul>
-  
-      <!-- Right navbar links -->
-      <ul class="navbar-nav ml-auto">
-        <!-- Navbar Search -->
-        <li class="nav-item">
-          <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-            <i class="fas fa-search"></i>
-          </a>
-          <div class="navbar-search-block">
-            <form class="form-inline">
-              <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                <div class="input-group-append">
-                  <button class="btn btn-navbar" type="submit">
-                    <i class="fas fa-search"></i>
-                  </button>
-                  <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                    <i class="fas fa-times"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </li>
-  
-   
-        <li class="nav-item">
-          <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-            <i class="fas fa-expand-arrows-alt"></i>
-          </a>
-        </li>
-      
-      </ul>
-    </nav>
-    <!-- /.navbar -->
   
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
@@ -366,7 +320,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title text-white" style="font-size: 25px; font-weight: 700;">Edit Item</h5>
+                        <h5 class="modal-title" style="font-size: 25px; font-weight: 700;">Edit Item</h5>
                         <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
                     </div>
                     <div class="modal-body">
@@ -374,21 +328,21 @@
                             {% csrf_token %}
                             <input type="hidden" name="item_id" value="">
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Name</label>
+                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" style="font-size: 15px">Name</label>
                                 <div class="col-sm-12 col-md-7">
-                                    <input type="text" name="name" class="form-control" style="border: 1px solid rgba(255, 255, 255, .75);">
+                                    <input type="text" name="name" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Description</label>
+                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" style="font-size: 15px">Description</label>
                                 <div class="col-sm-12 col-md-7">
-                                    <textarea type="text" name="description" class="form-control" style="border: 1px solid rgba(255, 255, 255, .75);"></textarea>
+                                    <textarea type="text" name="description" class="form-control"></textarea>
                                 </div>
                             </div>
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Quantity</label>
+                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" style="font-size: 15px">Quantity</label>
                                 <div class="col-sm-12 col-md-7">
-                                    <input type="number" name="quantity" style="width: 100px; border: 1px solid rgba(255, 255, 255, .75);" class="form-control" min="1" max="100">
+                                    <input type="number" name="quantity" style="width: 100px;" class="form-control" min="1" max="100">
                                 </div>
                             </div>
                             <div class="form-group row mb-4">
@@ -410,7 +364,7 @@
 
                 <div class="card mt-5" style="border-top: 4px solid #593bdb; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
                     <div class="card-header">
-                        <h4 class="card-title" style="font-size: 25px;color: white; font-weight: 700">All Item</h4>
+                        <h4 class="card-title" style="font-size: 25px; font-weight: 700">All Item</h4>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -421,7 +375,7 @@
                                     <input type="search" id="searchInput" placeholder="Search" class="form-control intp" onkeyup="searchTable()">
                                 </div>
                             </div>
-                            <div class="dataTables_length" id="example_length" style="color: rgba(255, 255, 255, .75); width: 140px;">
+                            <div class="dataTables_length" id="example_length" style=" width: 140px;">
                                 <label>Show entries 
                                     <select name="example_length" aria-controls="example" class="form-control" onchange="updateShowEntries(this.value)">
                                         <option value="all" {% if current_show == 'all' %}selected{% endif %}>All</option>
@@ -434,8 +388,8 @@
                                 </label>
                             </div>
         
-                            <table id="itemTable" class="table table-bordered table-striped table-responsive-sm" style="color: rgba(255, 255, 255, .75);">
-                                <thead class="thead-primary">
+                            <table id="itemTable" class="table table-bordered table-striped table-responsive-sm">
+                                <thead class="dark-mode">
                                     <tr>
                                         <th>Property ID</th>  <!-- Change ID to # for numbering -->
                                         <th>Item</th>
@@ -556,11 +510,9 @@
   
     <!-- Main Footer -->
     <footer class="main-footer">
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-      All rights reserved.
-      <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.1.0
-      </div>
+      <strong>Borrowing System By: </strong>
+      Run Time Terror.
+      
     </footer>
   </div>
 
@@ -679,7 +631,7 @@ function searchTable() {
           td = tr[i].getElementsByTagName("td");
           for (j = 0; j < td.length; j++) {
               // Ensure buttons, dropdowns, badges, and action columns are not affected
-              if (j === 7 || j === 8 || j === 9 || td[j].querySelector('.dropdownnn') || td[j].querySelector('.badge') || td[j].querySelector('.action-buttons')) {
+              if (j == 4 || j === 7 || j === 8 || j === 9 || td[j].querySelector('.dropdownnn') || td[j].querySelector('.badge') || td[j].querySelector('.action-buttons')) {
                   continue; // Skip "Status", "Action", and dropdowns, badges
               }
               td[j].innerHTML = td[j].textContent || td[j].innerText; // Reset text content
@@ -700,14 +652,14 @@ function searchTable() {
 
       // Iterate through each cell in the row
       for (j = 0; j < td.length; j++) {
-          if (j === 8 || j === 9 || j == 10) continue; // Skip "Status" and "Action" columns
+          if (j == 4 ||j === 8 || j === 9 || j == 10) continue; // Skip "Status" and "Action" columns
           if (td[j]) {
               txtValue = td[j].textContent || td[j].innerText;
               if (txtValue.toUpperCase().indexOf(filter) > -1) {
                   rowContainsFilter = true;
                   // Highlight matched text only in non-dropdown cells
                   if (!td[j].querySelector('.dropdown')) {
-                      td[j].innerHTML = txtValue.replace(regex, "<span style='background-color: #3f6791;'>$1</span>");
+                      td[j].innerHTML = txtValue.replace(regex, "<span style='background-color: #3f6791; color:white;'>$1</span>");
                   }
               } else {
                   // Remove highlights if no match
