--- a/DapartmentChair/templates/admin-student-reservation.html
+++ b/DapartmentChair/templates/admin-student-reservation.html
@@ -153,52 +153,7 @@
       <img class="animation__wobble" src="{% static 'dist/img/pit_logo.png' %}" alt="AdminLTELogo" height="60" width="60">
     </div>
   
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
-      <!-- Left navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block">
-          <a href="{% url 'admin-dashboard' %}" class="nav-link">Home</a>
-        </li>
-      </ul>
-  
-      <!-- Right navbar links -->
-      <ul class="navbar-nav ml-auto">
-        <!-- Navbar Search -->
-        <li class="nav-item">
-          <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-            <i class="fas fa-search"></i>
-          </a>
-          <div class="navbar-search-block">
-            <form class="form-inline">
-              <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                <div class="input-group-append">
-                  <button class="btn btn-navbar" type="submit">
-                    <i class="fas fa-search"></i>
-                  </button>
-                  <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                    <i class="fas fa-times"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </li>
-  
    
-        <li class="nav-item">
-          <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-            <i class="fas fa-expand-arrows-alt"></i>
-          </a>
-        </li>
-      
-      </ul>
-    </nav>
-    <!-- /.navbar -->
   
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
@@ -474,7 +429,7 @@
 
                 <div class="card mt-5" style="border-top: 4px solid #593bdb; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
                     <div class="card-header">
-                        <h4 class="card-title" style="font-size: 25px;color: white; font-weight: 700;">Student Reservation</h4>
+                        <h4 class="card-title" style="font-size: 25px; font-weight: 700;">Student Reservation</h4>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -487,7 +442,7 @@
                             </div>
 
                             <div style="display: flex; justify-content: space-between;">
-                                <div class="dataTables_length" id="example_length" style="color: rgba(255, 255, 255, .75); width: 140px;">
+                                <div class="dataTables_length" id="example_length" style=" width: 140px;">
                                     <label>Show entries 
                                         <select name="example_length" aria-controls="example" class="form-control" onchange="updateShowEntries(this.value)">
                                             <option value="all" {% if current_show == 'all' %}selected{% endif %}>All</option>
@@ -500,14 +455,14 @@
                                     </label>
                                 </div>
 
-                                <div class="dataTables_length" id="example_length" style="color: rgba(255, 255, 255, .75); width: 140px; margin-right: 200px">
+                                <div class="dataTables_length" id="example_length" style=" width: 140px; margin-right: 200px">
                                     <input type="text" id="date-range-picker" class="form-control" placeholder="Select a date range to show record" style="width: 300px; padding: 5px;">
                                     <i class="fa-solid fa-x" style="position: absolute; right: 70px; top: 135px; display: none;"  id="clear-icon"></i>
                                 </div>
                             </div>
         
                             <table id="itemTable" class="table table-bordered table-striped table-responsive-sm mt-3">
-                                <thead class="thead-primary">
+                                <thead class="dark-mode">
                                     <tr>
                                         <th scope="col" style="width: 100px;">Student ID</th>
                                         <th scope="col">Name</th>
@@ -520,7 +475,7 @@
                                         <th scope="col" style="width: 80px;">Action</th>
                                     </tr>
                                 </thead>
-                                <tbody style="color: rgba(255, 255, 255, .75);">
+                                <tbody>
                                     {% if page_obj %}
                                         {% for request in page_obj %}
                                             <tr>
@@ -661,12 +616,10 @@
   
     <!-- Main Footer -->
     <footer class="main-footer">
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-      All rights reserved.
-      <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.1.0
-      </div>
-    </footer>
+        <strong>Borrowing System By: </strong>
+        Run Time Terror.
+        
+      </footer>
   </div>
 
 
@@ -722,7 +675,7 @@ function searchTable() {
                     rowContainsFilter = true;
                     // Highlight matched text only in non-dropdown cells
                     if (!td[j].querySelector('.dropdown')) {
-                        td[j].innerHTML = txtValue.replace(regex, "<span style='background-color: #3f6791;'>$1</span>");
+                        td[j].innerHTML = txtValue.replace(regex, "<span style='background-color: #3f6791; color: white;'>$1</span>");
                     }
                 } else {
                     // Remove highlights if no match
@@ -880,7 +833,7 @@ document.addEventListener('DOMContentLoaded', function () {
         if (!noRecordsRow) {
             const noRecordsHTML = `
                 <tr class="no-records-row">
-                    <td colspan="9" class="text-center" style="color: rgba(255, 255, 255, .75);">
+                    <td colspan="9" class="text-center">
                         No records found.
                     </td>
                 </tr>
