--- a/DapartmentChair/templates/admin-users.html
+++ b/DapartmentChair/templates/admin-users.html
@@ -117,56 +117,7 @@ input:checked + .slider:before {
       <img class="animation__wobble" src="{% static 'dist/img/pit_logo.png' %}" alt="AdminLTELogo" height="60" width="60">
     </div>
   
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
-      <!-- Left navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block">
-          <a href="{% url 'admin-dashboard' %}" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block" style="position: relative; top:8px;">></li>
-        <li class="nav-item d-none d-sm-inline-block">
-            <a href="{% url 'admin-dashboard' %}" class="nav-link">Users</a>
-          </li>
-      </ul>
-  
-      <!-- Right navbar links -->
-      <ul class="navbar-nav ml-auto">
-        <!-- Navbar Search -->
-        <li class="nav-item">
-          <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-            <i class="fas fa-search"></i>
-          </a>
-          <div class="navbar-search-block">
-            <form class="form-inline">
-              <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                <div class="input-group-append">
-                  <button class="btn btn-navbar" type="submit">
-                    <i class="fas fa-search"></i>
-                  </button>
-                  <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                    <i class="fas fa-times"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </li>
-  
-   
-        <li class="nav-item">
-          <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-            <i class="fas fa-expand-arrows-alt"></i>
-          </a>
-        </li>
-      
-      </ul>
-    </nav>
-    <!-- /.navbar -->
+
   
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
@@ -323,7 +274,7 @@ input:checked + .slider:before {
   <div class="modal-dialog modal-lg" style="overflow: hidden;">
       <div class="modal-content">
           <div class="modal-header" style="border-bottom: 2px solid #593bdb;">
-              <h2 class="modal-title" style="color: white; font-weight: 700;">Create Users</h2>
+              <h2 class="modal-title" style="font-weight: 700;">Create Users</h2>
               <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
           </div>
           <div class="card-body">
@@ -333,7 +284,7 @@ input:checked + .slider:before {
                   {% csrf_token %}
                   <div class="form-row">
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Username</label>
+                          <label>Username</label>
                           <input type="text" name="username" class="form-control {% if errors.username_error %}is-invalid{% endif %}" 
                                  value="{{ request.POST.username }}" required>
                           {% if errors.username_error %}
@@ -341,7 +292,7 @@ input:checked + .slider:before {
                           {% endif %}
                       </div>
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Email</label>
+                          <label>Email</label>
                           <input type="email" name="email" class="form-control {% if errors.email_error %}is-invalid{% endif %}" 
                                  value="{{ request.POST.email }}" required>
                           {% if errors.email_error %}
@@ -351,21 +302,21 @@ input:checked + .slider:before {
                   </div>
                   <div class="form-row mt-3">
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Profile Picture</label>
+                          <label>Profile Picture</label>
                           <div id="imagePreviewContainer" style="margin-bottom: 10px;">
                               <img id="imagePreview" src="{% static 'images/users.jpg' %}" alt="Profile Picture" 
-                                   style="width: 100px; height: 100px; border-radius: 50%; border: 1px solid #bebebe;">
+                                   style="width: 100px; height: 100px; border-radius: 50%; ">
                           </div>
                           <input type="file" name="profile_picture" class="form-control" 
-                                 style="border: 1px solid #bebebe;" accept="image/*" onchange="previewImage(event)">
+                                 accept="image/*" onchange="previewImage(event)">
                       </div>
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Role</label><br>
-                          <label style="color: rgba(255, 255, 255, .75);">
+                          <label>Role</label><br>
+                          <label>
                               <input type="radio" name="role" value="Faculty" style="width: 20px; height: 20px;" required>&nbsp;
                               Faculty
                           </label>
-                          <label style="color: rgba(255, 255, 255, .75); margin-left: 20px;">
+                          <label style=" margin-left: 20px;">
                               <input type="radio" name="role" value="IT Chairman" style="width: 20px; height: 20px;" required>&nbsp;
                               IT Chairman
                           </label>
@@ -373,7 +324,7 @@ input:checked + .slider:before {
                   </div>
                   <div class="form-row mt-3">
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Password</label>
+                          <label>Password</label>
                           <input type="password" name="password" class="form-control {% if errors.password_error %}is-invalid{% endif %}" 
                                  required>
                           {% if errors.password_error %}
@@ -381,7 +332,7 @@ input:checked + .slider:before {
                           {% endif %}
                       </div>
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Confirm Password</label>
+                          <label>Confirm Password</label>
                           <input type="password" name="confirm_password" class="form-control {% if errors.confirm_password_error %}is-invalid{% endif %}" 
                                  required>
                           {% if errors.confirm_password_error %}
@@ -407,7 +358,7 @@ input:checked + .slider:before {
   <div class="modal-dialog modal-lg" style="overflow: hidden;">
       <div class="modal-content">
           <div class="modal-header" style="border-bottom: 2px solid #593bdb;">
-              <h2 class="modal-title" style="color: white; font-weight: 700;">Edit User Details</h2>
+              <h2 class="modal-title" style=" font-weight: 700;">Edit User Details</h2>
               <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
           </div>
           <div class="card-body">
@@ -418,7 +369,7 @@ input:checked + .slider:before {
                   <input type="hidden" name="user_id" value="{{ user.id }}"> <!-- Hidden input for user ID -->
                   <div class="form-row">
                     <div class="form-group col-md-6">
-                      <label style="color: rgba(255, 255, 255, .75);">Username</label>
+                      <label>Username</label>
                       <input type="text" name="usernamee" class="form-control {% if errors.usernamee_error %}is-invalid{% endif %}" 
                              value="{{ request.POST.username }}" required>
                       {% if errors.usernamee_error %}
@@ -426,7 +377,7 @@ input:checked + .slider:before {
                       {% endif %}
                   </div>
                       <div class="form-group col-md-6">
-                        <label style="color: rgba(255, 255, 255, .75);">Email</label>
+                        <label>Email</label>
                         <input type="email" name="emaill" class="form-control {% if errors.emaill_error %}is-invalid{% endif %}" 
                                value="{{ request.POST.email }}" required>
                         {% if errors.emaill_error %}
@@ -436,26 +387,26 @@ input:checked + .slider:before {
                   </div>
                   <div class="form-row mt-3">
                     <div class="form-group col-md-6">
-                      <label style="color: rgba(255, 255, 255, .75);">Profile Picture</label>
+                      <label>Profile Picture</label>
                       <div id="imagePreviewContainerr" style="margin-bottom: 10px;">
                           {% if user.profile_picture %}
                               <img id="imagePrevieww" src="{{ user.profile_picture.url }}" 
-                                   alt="Profile Picture" style="width: 100px; height: 100px; border-radius: 50%; border: 1px solid #bebebe;">
+                                   alt="Profile Picture" style="width: 100px; height: 100px; border-radius: 50%;">
                           {% else %}
                               <img id="imagePrevieww" src="{% static 'images/users.jpg' %}" 
-                                   alt="Default Profile Picture" style="width: 100px; height: 100px; border-radius: 50%; border: 1px solid #bebebe;">
+                                   alt="Default Profile Picture" style="width: 100px; height: 100px; border-radius: 50%;">
                           {% endif %}
                       </div>
                       <input type="file" name="profile_picturee" class="form-control" 
-                             style="border: 1px solid #bebebe;" accept="image/*" onchange="previewImagee(event)">
+                              accept="image/*" onchange="previewImagee(event)">
                     </div>
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Role</label><br>
-                          <label style="color: rgba(255, 255, 255, .75);">
+                          <label>Role</label><br>
+                          <label>
                               <input type="radio" name="rolee" value="Faculty" style="width: 20px; height: 20px;" required>&nbsp;
                               Faculty
                           </label>
-                          <label style="color: rgba(255, 255, 255, .75); margin-left: 20px;">
+                          <label style=" margin-left: 20px;">
                               <input type="radio" name="rolee" value="IT Chairman" style="width: 20px; height: 20px;" required>&nbsp;
                               IT Chairman
                           </label>
@@ -463,14 +414,14 @@ input:checked + .slider:before {
                   </div>
                   <div class="form-row mt-3">
                         <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">New Password</label>
+                          <label>New Password</label>
                           <div class="input-group">
                               <input type="password" name="new_password" class="form-control" id="newPasswordInput" >
                           </div>
                       </div>
                   
                       <div class="form-group col-md-6">
-                          <label style="color: rgba(255, 255, 255, .75);">Confirm Password</label>
+                          <label>Confirm Password</label>
                           <div class="input-group">
                               <input type="password" name="confirm_passworddd" class="form-control {% if errors.passworddd_error %}is-invalid{% endif %}" id="confirmPasswordInput">
                               {% if errors.passworddd_error %}
@@ -501,7 +452,7 @@ input:checked + .slider:before {
                 <div class="col-lg-12">
                     <div class="card mt-5" style="border-top: 4px solid #3f6791; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
                         <div class="card-header">
-                            <h4 class="card-title" style="font-size: 25px; color: white; font-weight: 700;">Users Record</h4>
+                            <h4 class="card-title" style="font-size: 25px;font-weight: 700;">Users Record</h4>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -519,7 +470,7 @@ input:checked + .slider:before {
                                 </div>
         
                                 <div style="display: flex; justify-content: space-between;">
-                                    <div class="dataTables_length" id="example_length" style="color: rgba(255, 255, 255, .75); width: 140px;">
+                                    <div class="dataTables_length" id="example_length" style=" width: 140px;">
                                         <label>Show entries 
                                             <select name="example_length" aria-controls="example" class="form-control" onchange="updateShowEntries(this.value)">
                                                 <option value="all" {% if current_show == 'all' %}selected{% endif %}>All</option>
@@ -535,7 +486,7 @@ input:checked + .slider:before {
                                 </div>
         
                                 <table id="itemTable" class="table table-striped table-responsive-sm mt-3">
-                                    <thead class="thead-primary">
+                                    <thead class="dark-mode">
                                         <tr>
                                             <th scope="col">Username</th>
                                             <th scope="col">Email</th>
@@ -545,7 +496,7 @@ input:checked + .slider:before {
                                             <th scope="col">Action</th>
                                         </tr>
                                     </thead>
-                                    <tbody style="color: white;">
+                                    <tbody>
                                       {% if page_obj %}
                                           {% for user in page_obj %}
                                               <tr>
@@ -596,7 +547,7 @@ input:checked + .slider:before {
                                       {% else %}
                                           <tr>
                                               <td colspan="10" class="text-center">
-                                                  <div style="color: rgba(255, 255, 255, .75);">
+                                                  <div>
                                                       No User Available.
                                                   </div>
                                               </td>
@@ -674,12 +625,10 @@ input:checked + .slider:before {
   
     <!-- Main Footer -->
     <footer class="main-footer">
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-      All rights reserved.
-      <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.1.0
-      </div>
-    </footer>
+        <strong>Borrowing System By: </strong>
+        Run Time Terror.
+        
+      </footer>
   </div>
   
 
@@ -787,7 +736,7 @@ input:checked + .slider:before {
                       rowContainsFilter = true;
                       // Highlight matched text only in non-dropdown cells
                       if (!td[j].querySelector('.dropdown')) {
-                          td[j].innerHTML = txtValue.replace(regex, "<span style='background-color: #3f6791;'>$1</span>");
+                          td[j].innerHTML = txtValue.replace(regex, "<span style='background-color: #3f6791; color: white;'>$1</span>");
                       }
                   } else {
                       // Remove highlights if no match
